# IfesSistemasInternos

./: README.md
docs/: README.md
docs/analisys/: AE_Diagramas.asta
project/backend/: .gitignore  pyproject.toml  requirements.txt
project/backend/app/: db.sqlite3  requirements.txt
project/backend/app/AE/: apps.py  urls.py
project/backend/app/AE/apiviews/: AlunoViews.py
project/backend/app/AE/migrations/: 0001_initial.py
project/backend/app/AE/models/: AlunoEnums.py  AlunoModel.py  AuxilioModel.py  BancoModel.py  CategoriaModel.py  CondicaoFisicaMentalModel.py  CotaModel.py  CursoEnums.py  CursoModel.py  DadosBancariosEnum.py  DadosBancariosModel.py  EnderecoModel.py  EstadoModel.py  GFModel.py  MatriculaModel.py  ResponsavelEnums.py  ResponsavelModel.py  SegregacaoRendaCotaModel.py  TipoEscolaModel.py  __init__.py
project/backend/app/AE/serealizers/: AlunoSerializer.py  MatriculaSerializer.py
project/backend/app/app/: AdminConfig.py  SwaggerConfig.py  settings.py  urls.py
project/backend/app/modules/student/: admin.py  apiViews.py  apps.py  models.py  serializers.py  urls.py
project/frontend/app/: package-lock.json  package.json
project/frontend/app/public/: index.html
project/frontend/app/src/: App.js  index.tsx
project/frontend/app/src/routes/: AlunoRoutes.jsx  Router.jsx
project/frontend/app/src/routes/ae/: AERoutes.jsx  AlunoRoutes.jsx
project/frontend/app/src/share/components/: DeleteConfirmation.tsx  FuseSearchInput.tsx  PasswordField.tsx  ThemeSwitcher.tsx
project/frontend/app/src/views/: Home.jsx
(+45 files in other folders)
